<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.deepfood.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
		        <item android:id="@+id/food"
		              android:title="@string/on" />
		        <item android:id="@+id/general"
		              android:title="@string/off" />
    		</group>
        </menu>
    </item>
    <item
        android:id="@+id/action_mode"
        android:orderInCategory="100"
        android:title="@string/action_mode"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
		        <item android:id="@+id/food"
		              android:title="@string/food" />
		        <item android:id="@+id/general"
		              android:title="@string/general" />
    		</group>
        </menu>
      </item>
    

</menu>
